@@ -1,192 +1,129 @@
 package slimeknights.mantle.recipe.ingredient;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
-import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonSyntaxException;
 import lombok.RequiredArgsConstructor;
-import net.minecraft.core.Holder;
 import net.minecraft.core.Registry;
 import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.TagKey;
-import net.minecraft.util.GsonHelper;
 import net.minecraft.world.entity.EntityType;
-import net.minecraftforge.registries.ForgeRegistries;
-import slimeknights.mantle.util.JsonHelper;
+import slimeknights.mantle.data.loadable.IAmLoadable;
+import slimeknights.mantle.data.loadable.Loadable;
+import slimeknights.mantle.data.loadable.Loadables;
+import slimeknights.mantle.data.loadable.mapping.EitherLoadable;
+import slimeknights.mantle.data.loadable.record.RecordLoadable;
+import slimeknights.mantle.util.RegistryHelper;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 /**
  * Ingredient accepting an entity or an entity tag as an input
  */
-public abstract class EntityIngredient implements Predicate<EntityType<?>> {
-  /** Empty entity ingredient, matching nothing */
-  public static final EntityIngredient EMPTY = new SetMatch(Collections.emptySet());
+public abstract class EntityIngredient implements Predicate<EntityType<?>>, IAmLoadable {
+  /** Empty entity ingredient, matching nothing. This ingredient does not parse from JSON, use defaulting methods if you wish to use it */
+  public static final EntityIngredient EMPTY = new Compound(Collections.emptyList());
 
-  /**
-   * Gets a list of entity types matched by this ingredient
-   * @return  List of types
-   */
-  public abstract Collection<EntityType<?>> getTypes();
 
-  /**
-   * Serializes this ingredient to JSON
-   * @return  Json element of this ingredient
-   */
-  public abstract JsonElement serialize();
+  /* Loadables */
 
-  /** Writes this ingredient to the packet buffer */
-  public void write(FriendlyByteBuf buffer) {
-    Collection<EntityType<?>> collection = getTypes();
-    buffer.writeVarInt(collection.size());
-    for (EntityType<?> type : collection) {
-      buffer.writeRegistryIdUnsafe(ForgeRegistries.ENTITY_TYPES, type);
-    }
+  /** Creates a builder with set and tag */
+  private static EitherLoadable.TypedBuilder<EntityIngredient> loadableBuilder() {
+    return EitherLoadable.<EntityIngredient>typed().key("types", SET_MATCH).key("tag", TAG_MATCH);
   }
+  /** Loadable for a set match */
+  private static final RecordLoadable<EntityIngredient> SET_MATCH = RecordLoadable.create(Loadables.ENTITY_TYPE.set().requiredField("types", EntityIngredient::getTypes), EntityIngredient::of);
+  /** Loadable for a tag match */
+  private static final RecordLoadable<TagMatch> TAG_MATCH = RecordLoadable.create(Loadables.ENTITY_TYPE_TAG.requiredField("tag", t -> t.tag), TagMatch::new);
+  /** Loadable disallows nested lists, just handles nested tags and sets */
+  private static final Loadable<Compound> COMPOUND = EntityIngredient.loadableBuilder().build(SET_MATCH).list(2).flatMap(Compound::new, c -> c.ingredients);
+  /** Loadable for any fluid ingredient */
+  public static final Loadable<EntityIngredient> LOADABLE = loadableBuilder().array(COMPOUND).build(SET_MATCH);
 
-  /**
-   * Creates an ingredient to match a single type
-   */
-  public static EntityIngredient of(EntityType<?> type) {
-    return new Single(type);
-  }
+  /* Constructors */
 
   /**
    * Creates an ingredient to match a set of types
    */
   public static EntityIngredient of(Set<EntityType<?>> set) {
+    if (set.isEmpty()) {
+      return EMPTY;
+    }
     return new SetMatch(set);
   }
 
-  /**
-   * Creates an ingredient to match a set of types
-   */
+  /** Creates an ingredient to match a set of types */
   public static EntityIngredient of(EntityType<?> ... types) {
     return of(ImmutableSet.copyOf(types));
   }
 
-  /**
-   * Creates an ingredient to match a tags
-   */
+  /** Creates an ingredient to match a tags */
   public static EntityIngredient of(TagKey<EntityType<?>> tag) {
     return new TagMatch(tag);
   }
 
-  /**
-   * Creates an ingredient from a list of ingredients
-   */
+  /** Creates an ingredient from a list of ingredients */
   public static EntityIngredient of(EntityIngredient... ingredients) {
-    return new Compound(Arrays.asList(ingredients));
+    return of(List.of(ingredients));
+  }
+
+  /** Creates an ingredient from a list of ingredients */
+  private static EntityIngredient of(List<EntityIngredient> ingredients) {
+    if (ingredients.isEmpty()) {
+      return EMPTY;
+    }
+    if (ingredients.size() == 1) {
+      return ingredients.get(0);
+    }
+    return new Compound(ingredients);
+  }
+
+
+  /* Common methods */
+
+  /**
+   * Gets a list of entity types matched by this ingredient
+   * @return  List of types
+   */
+  public abstract Set<EntityType<?>> getTypes();
+
+  /**
+   * Serializes this ingredient to JSON
+   * @return  Json element of this ingredient
+   */
+  public JsonElement serialize() {
+    return LOADABLE.serialize(this);
+  }
+
+
+  /** Writes this ingredient to the packet buffer */
+  public void write(FriendlyByteBuf buffer) {
+    SET_MATCH.toNetwork(this, buffer);
   }
 
   /**
    * Reads an ingredient from the packet buffer
    * @param buffer  Buffer instance
-   * @return  Ingredient instnace
+   * @return  Ingredient instance
    */
   public static EntityIngredient read(FriendlyByteBuf buffer) {
-    int count = buffer.readVarInt();
-    if (count == 1) {
-      return new Single(buffer.readRegistryIdUnsafe(ForgeRegistries.ENTITY_TYPES));
-    }
-    List<EntityType<?>> list = new ArrayList<>(count);
-    for (int i = 0; i < count; i++) {
-      list.add(buffer.readRegistryIdUnsafe(ForgeRegistries.ENTITY_TYPES));
-    }
-    return new SetMatch(ImmutableSet.copyOf(list));
+    return SET_MATCH.fromNetwork(buffer);
   }
 
-  /**
-   * Finds an entity type for the given key
-   * @param name  Entity type name
-   * @return  Entity type
-   */
-  private static EntityType<?> findEntityType(ResourceLocation name) {
-    if (ForgeRegistries.ENTITY_TYPES.containsKey(name)) {
-      EntityType<?> type = ForgeRegistries.ENTITY_TYPES.getValue(name);
-      if (type != null) {
-        return type;
-      }
-    }
-    throw new JsonSyntaxException("Invalid entity type " + name);
-  }
 
-  /**
-   * Deserializes an ingredient from JSON
-   * @param root  Json
-   * @return  Ingredient
-   */
-  public static EntityIngredient deserialize(JsonElement root) {
-    if (root.isJsonArray()) {
-      JsonArray array = root.getAsJsonArray();
-      ImmutableList.Builder<EntityIngredient> builder = ImmutableList.builder();
-      for (JsonElement element : array) {
-        builder.add(deserialize(element));
-      }
-      return new Compound(builder.build());
-    }
-    if (!root.isJsonObject()) {
-      throw new JsonSyntaxException("Entity ingredient must be either an object or an array");
-    }
-    JsonObject json = root.getAsJsonObject();
-
-    // type is just a name
-    if (json.has("type")) {
-      ResourceLocation name = new ResourceLocation(GsonHelper.getAsString(json, "type"));
-      return new Single(findEntityType(name));
-    }
-    // tag is also a name
-    if (json.has("tag")) {
-      return new TagMatch(TagKey.create(Registry.ENTITY_TYPE_REGISTRY, JsonHelper.getResourceLocation(json, "tag")));
-    }
-    // types is a list
-    if (json.has("types")) {
-      List<EntityType<?>> types = JsonHelper.parseList(json, "types", (element, key) -> findEntityType(new ResourceLocation(GsonHelper.convertToString(element, key))));
-      return new SetMatch(ImmutableSet.copyOf(types));
-    }
-
-    // missed all keys
-    throw new JsonSyntaxException("Invalid entity type ingredient, must have 'type', 'types', or 'tag'");
-  }
-
-  /** Ingredient matching a single type */
-  @RequiredArgsConstructor
-  private static class Single extends EntityIngredient {
-    private final EntityType<?> type;
-
-    @Override
-    public boolean test(EntityType<?> type) {
-      return type == this.type;
-    }
-
-    @Override
-    public List<EntityType<?>> getTypes() {
-      return Collections.singletonList(type);
-    }
-
-    @Override
-    public JsonElement serialize() {
-      JsonObject object = new JsonObject();
-      object.addProperty("type", Registry.ENTITY_TYPE.getKey(type).toString());
-      return object;
-    }
-  }
+  /* Impls */
 
   /** Ingredient that matches any entity from a set */
   @RequiredArgsConstructor
   private static class SetMatch extends EntityIngredient {
     private final Set<EntityType<?>> types;
+
+    @Override
+    public Loadable<?> loadable() {
+      return SET_MATCH;
+    }
 
     @Override
     public boolean test(EntityType<?> type) {
@@ -197,24 +134,18 @@ public abstract class EntityIngredient implements Predicate<EntityType<?>> {
     public Set<EntityType<?>> getTypes() {
       return types;
     }
-
-    @Override
-    public JsonElement serialize() {
-      JsonObject object = new JsonObject();
-      JsonArray array = new JsonArray();
-      for (EntityType<?> type : getTypes()) {
-        array.add(Registry.ENTITY_TYPE.getKey(type).toString());
-      }
-      object.add("types", array);
-      return object;
-    }
   }
 
   /** Ingredient that matches any entity from a tag */
   @RequiredArgsConstructor
   private static class TagMatch extends EntityIngredient {
     private final TagKey<EntityType<?>> tag;
-    private List<EntityType<?>> types;
+    private Set<EntityType<?>> types;
+
+    @Override
+    public Loadable<?> loadable() {
+      return TAG_MATCH;
+    }
 
     @Override
     public boolean test(EntityType<?> type) {
@@ -222,31 +153,24 @@ public abstract class EntityIngredient implements Predicate<EntityType<?>> {
     }
 
     @Override
-    public List<EntityType<?>> getTypes() {
+    public Set<EntityType<?>> getTypes() {
       if (types == null) {
-        types = StreamSupport.stream(Registry.ENTITY_TYPE.getTagOrEmpty(tag).spliterator(), false)
-                             .filter(Holder::isBound)
-                             .map(Holder::value)
-                             .collect(Collectors.toList());
+        types = RegistryHelper.getTagValueStream(Registry.ENTITY_TYPE, tag).collect(ImmutableSet.toImmutableSet());
       }
       return types;
     }
-
-    @Override
-    public JsonElement serialize() {
-      JsonObject object = new JsonObject();
-      object.addProperty("tag", tag.location().toString());
-      return object;
-    }
   }
 
-  /**
-   * Ingredient combining multiple
-   */
+  /** Ingredient combining multiple */
   @RequiredArgsConstructor
   private static class Compound extends EntityIngredient {
     private final List<EntityIngredient> ingredients;
-    private List<EntityType<?>> allTypes;
+    private Set<EntityType<?>> allTypes;
+
+    @Override
+    public Loadable<?> loadable() {
+      return COMPOUND;
+    }
 
     @Override
     public boolean test(EntityType<?> type) {
@@ -259,23 +183,13 @@ public abstract class EntityIngredient implements Predicate<EntityType<?>> {
     }
 
     @Override
-    public Collection<EntityType<?>> getTypes() {
+    public Set<EntityType<?>> getTypes() {
       if (allTypes == null) {
         allTypes = ingredients.stream()
                               .flatMap(ingredient -> ingredient.getTypes().stream())
-                              .distinct()
-                              .collect(Collectors.toList());
+                              .collect(ImmutableSet.toImmutableSet());
       }
       return allTypes;
-    }
-
-    @Override
-    public JsonElement serialize() {
-      JsonArray array = new JsonArray();
-      for (EntityIngredient ingredient : ingredients) {
-        array.add(ingredient.serialize());
-      }
-      return array;
     }
   }
 }
